--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   firebase_auth: ^0.16.0
   cloud_firestore: ^0.13.5
   firebase_messaging: ^6.0.15
+  geolocator: ^5.3.1 #For location queries
 
 dev_dependencies:
   flutter_test:
