--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   google_maps_flutter: ^0.5.27+1
   provider: ^4.0.0
   modal_progress_hud: ^0.1.3
-  geolocator: ^5.3.1 #For location queries
+  geolocator: ^5.3.1              # For location and permissions management
   shared_preferences: ^0.5.7+2
 
 
