--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   shared_preferences: ^0.5.7+2
   android_intent: ^0.3.7+2
   geoflutterfire: ^2.1.0          # For geo-queries to get nearby mosques.
+  url_launcher: ^5.4.10
 
 
 
